--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-  background-color: #303030;
-  color: #FAFAFA;
+  background-color: #fafafa;
+  color: #303030;
 }
