--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+html {
+  min-height: 100%;
+  position: relative;
+}
+body {
+  margin: 0;
+  margin-bottom: 40px;
+  color: black;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: #8E9FE6;
+  text-align: center;
+}
 .appBar {
   background-color: #8E9FE6 !important;
 }
@@ -17,158 +33,89 @@
   height: 50vh;
 }
 
-.button {
-  margin: 1rem;
-  font-size: 1.5rem !important;
-  width: 8rem;
-  height: 2rem;
+.App {
+  text-align: center;
 }
 
-.calendar {
-  height: 50vh;
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 20rem;
+}
+
+.App-header {
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
+  color: white;
+}
+
+.App-title {
+  font-size: 1.5em;
 }
 
 .App-intro {
-  font-size: 1.1rem;
-  font-weight: bold;
-  text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+  font-size: large;
 }
 
-.rbc-calendar {
-  padding: 1rem 0;
-  font-size: 0.6rem !important;
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
-
-.rbc-toolbar {
- background-color: #DBF094;
- font-size: 0.6rem !important;
-}
-
-.rbc-toolbar button {
-  font-size: 0.6rem !important;
-  padding: 0.5rem 0.2rem !important;
-  text-transform: uppercase;
-}
-
-.rbc-active {
-  background-color: #F5FFCB !important;
-}
-
-.rbc-month-view {
-  background-color: #FFF;
-}
-
 #number-of-hours-popup{
-  position: fixed; 
+  position:fixed;
   z-index: 5;
-  width: 40%;
-  height: auto; 
-  color: #303030;
+  background: #ffffff33;
+  width: 100%;
+  height: auto;
+  color:black;
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
+}
 #number-of-hours-popup main{
-  background-color: #FAFAFA;
-  width: 100%;
-  height: 100vh;
+  background:#dddfea;
+  width: 80%;
+  height: 50vh;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
-
 #number-of-hours-popup input{
-  border: 5px solid  rgb(47, 136, 165);
+  border: 1px solid  #8E9FE6;
   width: 50%;
   display: inline-block;
-  text-align: center;
-  color: #303030;
-  padding: 1em;
-  font-size: small;
+text-align: center;
+color:black;
+padding: 1em;
+font-size: small;
 }
-
 .important-message{
   width: 100%;
   display: inline-block;
   text-align: center;
-  color: #303030;
-  height: 1rem;
-  padding: 0.4rem 0;
-  background-color: #DBF094;
+  color:white;
+  background:#8E9FE6;
   text-transform: uppercase;
   font-weight: 400;
   font-size: small;
 }
-
 .calcedHours{
-  border-radius: 2em;
   text-align: center;
-  padding: 1em;
+  padding: .5em;
   color:white;
-  background-color: #DBF094;
+  background: #8E9FE6;
   text-transform: uppercase;
   width: 50%;
   margin:auto;
 }
-
-.slot-selected {
+.slot-selectd{
   text-align: center;
   padding: 2em;
 }
-
-.rbc-today {
-  background-color: #F5FFCB;
+.calendar{
+  margin-top:  5%;
 }
-
-.rbc-event {
-  background-color: #F5C8BD !important;
-}
-
-.rbc-toolbar-label {
-  text-transform: capitalize;
-}
-
-.rbc-selected {
-  background-color: #f79278 !important;
-}
-
-.rbc-off {
-  background-color: #eeeeee;
-}
-
-header {
-  background-image: url(./images/lunas.jpg);
-  background-repeat: repeat-x;
-  background-size: fill;
-}
-
-.footer {
-  background-color: #E5E5E5;
-  top: 90vh;
-  height: 5vh;
-  color: #8E9FE6;
-  padding: 1.2rem 1rem 0;
-  font-size: 0.9rem;
-}
-
-@media only screen and (min-width:750px) {
-  .calendar {
-    height: 65vh;
-  }
-  .rbc-calendar {
-    height: 65vh !important;
-    font-size: 1rem!important;
-  }
-  .rbc-toolbar {
-    font-size: 1.2rem !important;
-  }
-  .rbc-toolbar button {
-    font-size: 0.7rem !important;
-    padding: .375rem 1rem !important;
-    text-transform: uppercase;
-  }
-  .App-intro {
-    font-size: 1.5rem;
-  }
+button{
+  margin:1em;
 }
